--- a/Prerequisites/CSSCrashCourse.html
+++ b/Prerequisites/CSSCrashCourse.html
@@ -11,10 +11,12 @@
     <div class="box1">
     <h1>Hello World</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cumque dicta deleniti eum in reprehenderit animi eius aut neque. Natus hic a quis nisi laboriosam officia ipsam dolorum at repudiandae.</p>
+    <a href="#" id="button">Read More</a>
     </div>
     <div class="box2">
     <h1>Goodbye World</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cumque dicta deleniti eum in reprehenderit animi eius aut neque. Natus hic a quis nisi laboriosam officia ipsam dolorum at repudiandae.</p>
+    <a href="#" id="button">Read More</a>
     </div>
 
     <div class="Categories"><h2>Categories</h2>
@@ -26,7 +28,92 @@
         <li><a href="#">Contact us</li>
         </ul>
     </div>
- </div>
+    <form class="form" id="form-id">
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name"type="text">
+        </div>
+
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="">
+            <!-- placeholder works on input or textarea -->
+        </div>
+
+        <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message"></textarea>
+        </div>
+
+        <div>
+            <button id="button" type="submit">Submit</button>
+        </div>
+        
+    </form>
+
+    <div class="block">
+        <h1>Hello World</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cumque dicta deleniti eum in reprehenderit animi eius aut neque. Natus hic a quis nisi laboriosam officia ipsam dolorum at repudiandae.</p>
+    </div>
+
+
+    <div class="block">
+        <h1>Hello World</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cumque dicta deleniti eum in reprehenderit animi eius aut neque. Natus hic a quis nisi laboriosam officia ipsam dolorum at repudiandae.</p>
+    </div>
+
+
+    <div class="block">
+        <h1>Hello World</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cumque dicta deleniti eum in reprehenderit animi eius aut neque. Natus hic a quis nisi laboriosam officia ipsam dolorum at repudiandae.</p>
+    </div>
+
+    <div class="clear"></div>
+
+    <div class="mainblock">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio deleniti molestias tempore at esse, exercitationem asperiores quisquam beatae? Animi cumque dicta quod, eos temporibus dolorum nobis perferendis harum repellat molestiae.</p>
+    </div>
+
+    <div class="sidebar">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste placeat harum ab odio qui deserunt quis nostrum ducimus! Voluptates voluptatibus dolorum, aspernatur fugit amet quod ea possimus. Voluptas, laborum nulla?</p>
+    </div>
+    <div class="clear"></div>
+
+
+    <div class="p-box">
+        <h1>Hello</h1>
+        <h2>Goodbye</h2>
+        <h3>Sayonara</h3>
+    </div>
+
+    <div class="p-box2">
+        <h1>I'm Fixed</h1>
+    </div>
+
+    <div class="p-box3">
+        <h1>I'm Sticky</h1>
+    </div>
+
+    <div>
+        <ul class="pseudocodes">
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+            <li>Enter</li>;
+        </ul>
+    </div>
+
+
+    
+ </div>  <!-- //container -->
+
+ <div style="margin-bottom: 500px;"></div>
 
 </body>
 </html>
